{
    "name": "InputMap",
    "maps": [
        {
            "name": "KeyboardMap",
            "id": "7787575f-0876-4928-ad40-1c3a883e12ca",
            "actions": [
                {
                    "name": "MoveAction",
                    "type": "Value",
                    "id": "0e03dd8e-6104-4b16-a098-7009d62fade8",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "WASD Movement",
                    "id": "3d91bccd-5994-4068-a513-c95f267a0966",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveAction",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "69060a60-33ed-4df9-8afc-b1bbe36c1c8c",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardInputs",
                    "action": "MoveAction",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "1b2eaa9b-19bd-4ffc-a7aa-6d3863722537",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardInputs",
                    "action": "MoveAction",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "8a78546b-941b-4231-936b-c8ffb83530a6",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardInputs",
                    "action": "MoveAction",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "6dc1ed19-2953-4474-8b94-e5fb9822caa6",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardInputs",
                    "action": "MoveAction",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "KeyboardInputs",
            "bindingGroup": "KeyboardInputs",
            "devices": []
        }
    ]
}